--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "react": "~17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "~17.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
