--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "~17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "~17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
